# dot4ch

./: Cargo.toml  README.md  readme.txt
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md  archive.rs  board.rs  catalog.rs  eg_board.rs  eg_catalog.rs  eg_post.rs  eg_thread.rs  readme.md  thread.rs  threadlist.rs
examples/board/: Cargo.toml
examples/board/src/: main.rs
examples/catalog/: Cargo.toml
examples/post/: Cargo.toml
examples/post/src/: main.rs
examples/thread/: Cargo.toml
examples/thread/src/: main.rs
src/: board.rs  cat_thread.rs  catalog.rs  client.rs  error.rs  lib.rs  post.rs  result.rs  thread.rs  threadlist.rs
src/models/: archive.rs  board.rs  catalog.rs  mod.rs  thread.rs  threadlist.rs
