[package]
name = "dot4ch"
version = "2.0.1"
authors = ["b1tzxd <nth#8963>"]
edition = "2018"
description = "Wrapper library around 4chan API"
license = "GPL-3.0"
repository = "https://github.com/bltzxsd/dot4ch"
keywords = ["4chan" , "api", "library", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.3", features = ["json"] }
tokio = { version = "1.6.1", features = ["time", "sync", "rt-multi-thread", "macros"] }
chrono = "0.4.19"
serde = { version = "1.0.126", features = ["derive"]}
log = "0.4.14"
async-trait = "0.1.50"
anyhow = "1.0.40"

[dev-dependencies]
simple_logger = "1.11.0"

[workspace] 
members = ["examples"]

