[package]
name = "dot4ch"
version = "3.0.0"
authors = ["b1tzxd"]
edition = "2021"
description = "Wrapper library around 4chan API"
license = "GPL-3.0"
repository = "https://github.com/bltzxsd/dot4ch"
keywords = ["4chan" , "api", "library", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["time", "sync", "rt-multi-thread", "macros"] }
chrono = "0.4.22"
serde = { version = "1.0.144", features = ["derive"]}
log = "0.4.17"
async-trait = "0.1.57"
thiserror = "1.0.32"

[dev-dependencies]
simple_logger = "2.3.0"
anyhow = "1.0.62"

[features]
display = []
all = ["display"]