[package]
name = "dot4ch"
version = "4.0.0"
authors = ["dot4ch-team"]
edition = "2021"
description = "Wrapper library around 4chan API"
license = "GPL-3.0"
repository = "https://github.com/bltzxsd/dot4ch"
keywords = ["4chan", "api", "library", "wrapper"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
reqwest = { version = "^0.12.7",  features = ["json"] }
serde =   { version = "^1.0.210", features = ["derive"] }
tokio =   { version = "^1.40.0",  features = ["time", "sync"] }

[dev-dependencies]
tokio =   { version = "^1.40.0",  features = ["rt-multi-thread", "macros"] }
