[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
dot4ch = { path = "../" }

[[example]]
name = "board"
path = "board.rs"

[[example]]
name = "catalog"
path = "catalog.rs"

[[example]]
name = "thread"
path = "thread.rs"

[[example]]
name = "archive"
path = "archive.rs"
