[package]
name = "catalog"
version = "0.1.0"
authors = ["b"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"]}
dot4ch = "1.0.1"

## Optional Dependencies 

# This is just for seeing the logs, you may remove it if you wish.
simple_logger = "1.11.0" 